<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Myntra</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="product_img">Product Image</string>
    <string name="user_name">Username</string>
    <string name="pswrd">Password</string>
    <string name="required">Required</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="what_on_mind">What\'s on your mind?</string>
    <string name="rating">Rating</string>
    <string name="frnd_suggestion">Suggested by Sakshi</string>
    <string name="frnd_cart">Shreya added it to cart</string>
    <string name="how_help">How can I help you?</string>
    <string name="try_virtual">Try Virtual Look</string>
    <string name="add_cart">Add to Cart</string>
    <string name="add_to_wish">Add to Wishlist</string>
    <string name="first_name">First Name</string>
    <string name="suggest_frnd">Suggest your Friends</string>
    <string name="save">Save</string>
    <string name="friends">Friends</string>
    <string name="sample_brand">Ever Stylish</string>
    <string name="title">Title</string>
    <string name="view_3d">View in 3D</string>

</resources>